# saltyboy

./: .eslintrc.json  .gitignore  .prettierrc.json  .template.env  LICENSE  Makefile  README.md  auto-restart.sh  dev.code-workspace  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  error_cron.sh  purge-logs.sh  pyproject.toml  run-with-logs.sh  setup.sh  swap-cron-logs.sh
.github/ISSUE_TEMPLATE/: extension-always-betting--1-on-red.md
applications/bot/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
applications/bot/alembic/: env.py
applications/bot/alembic/versions/: 248ad8274833_heartbeat_table.py  fd36e6c00794_add_current_date_field_to_current_match_.py
applications/bot/src/: app_logging.py  database.py  irc.py  objects.py  run.py
applications/extension/: .gitignore  .prettierrc  package-lock.json  package.json
applications/extension/src/: manifest.json
applications/extension/src/content_scripts/: main.js
applications/extension/src/content_scripts/bet_modes/: elo.js
applications/extension/src/popup/: popup.html  popup.js
applications/extension/src/utils/storage/: debugSettings.js  matchData.js
applications/web/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
applications/web/public/: index.html
applications/web/src/: app.py  biz.py  database.py  schemas.py
bot/: Dockerfile  alembic.ini  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
bot/alembic/: env.py
bot/alembic/versions/: 65deecb0c4f0_current_match.py  8bb9adee6434_nullable_tier.py  908066480906_initial.py  eac8dd9395bd_elo_tables.py
bot/src/: database.py  irc.py  objects.py  run.py
bot/src/objects/: match.py  waifu.py
db-wrapper/: package-lock.json  package.json
db-wrapper/src/: index.js  reset-db.sh
db-wrapper/src/models/: model.js
db-wrapper/src/routes/: get-odds.js  insert.js
db-wrapper/src/setup-scripts/: reset-db.sh  run-venv.sh  setup-tables.py
docs/: CONTRIBUTING.md  deploying.md  developing.md  project_structure.md  setup.md
extension/: gulpfile.js  manifest.json  package-lock.json  package.json  saltyboy.js  webpack.config.js
extension/popup/: popup.html  popup.js
extension/src/: manifest.json
extension/src/background/: main.js
extension/src/background_scripts/: background.js
extension/src/content_scripts/: content.js  main.js
extension/src/content_scripts/bet_modes/: eloTier.js  naive.js  passive.js  rng.js  upset.js
extension/src/popup/: popup.css  popup.html  popup.js
extension/src/utils/: match.js  storage.js
extension/src/utils/storage/: appSettings.js  betSettings.js  matchData.js  winnings.js
scripts/: backup_database.sh
src/bot/: Dockerfile  main.py  pyproject.toml
src/bot/alembic/: env.py
src/bot/alembic/versions/: beb40ff88475_postgresql_initial.py
src/bot/src/: database.py
src/bot/src/objects/: match.py  waifu.py
src/extension/: package-lock.json  package.json  webpack.config.js
src/extension/src/: manifest.json
src/extension/src/content_scripts/: main.js
src/extension/src/popup/: popup.html  popup.js
src/extension/src/utils/storage/: appSettings.js  matchStatus.js
src/web/: Dockerfile  pyproject.toml
src/web/src/: app.py  biz.py  biz_new.py  database.py  schemas.py  utils.py
src/web/src/biz/: fighter.py  match.py
src/web/src/schemas/: match.py
twitch-bot/: package-lock.json  package.json
twitch-bot/src/: bot.js
web/: Dockerfile  main.py  pyproject.toml  requirements.txt
web/public/: index.html  robots.txt
web/src/: biz.py  database.py  schemas.py  utils.py
web/src/biz/: database.py  fighter.py  match.py
web/src/schemas/: base.py  database.py  fighters.py  match.py
