[tool.poetry]
name = "web"
version = "1.0.0"
description = "Light-weight Web API for serving requests to interact with the SaltyDB"
authors = ["how2vim <francisco.ad.trindade@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apispec = "^6.3.0"
apispec-webframeworks = "^0.5.2"
dataclasses-jsonschema = "^2.16.0"
flasgger = "^0.9.5"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"
Paste = "^3.5.2"
python-dotenv = "^1.0.0"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"
pycln = "^2.1.3"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.MASTER]
disable = [
    "C0114", # C0114: missing-module-docstring
    "C0115", # C0115: missing-class-docstring
    "C0116", # C0116: missing-function-docstring
    "R0902", # R0902: too-many-instance-attributes
]
good-names = [
    "id"
]